2004-12-09  Vincent Noel  <vnoel@cox.net>

	* logview.c (main): Instead of requesting the option --file to
	open a log, simply consider that all arguments passed to
	gnome-system-log are log files, and try to open them. Remove the
	--file option. Moved the option code to goption. No option for now.
	(main): Don't open the standard log if a logfile was passed as a
	parameter but could not be opened.

	* logrtns.c: Better error message.
	(file_exist): New. Extract the file existence logic from the "file
	is a log" function - the file could be zipped.

2004-11-29  Vincent Noel  <vnoel@cox.net>

	* Makefile.am (gnome_system_log_SOURCES): Fixes for make distcheck.

2004-11-24  Vincent Noel  <vnoel@cox.net>

	* userprefs.c: parse_syslog is back from the dead. My mistake,
	this function was actually useful.
	(prefs_create_defaults): Use parse_syslog to look for logs.

2004-11-23  Vincent Noel  <vnoel@cox.net>

	* logview.c (logview_menu_item_set_state): Use
	gtk_action_set_sensitive instead of
	gtk_widget_set_sensitive. Remove now-useless prevention against
	keyboard activation.

	* log_repaint.c (handle_row_activation_cb): Use gtk_action_activate.
	* calendar.c (close_calendar): Same thing.
	* zoom.c (close_zoom_view): Same thing.
	* logview.c (CloseLogMenu): Same thing.

2004-11-18  Vincent Noel  <vnoel@cox.net>

	* monitor.c (mon_update_display): Use bold markup to show changes
	in a monitored log instead of selecting the changed lines.

	* zoom.c: Simplify a lot. Use labels and markup in zoom dialog.

	* info.c (LogInfo): Simplify a lot. Use markup in properties dialog.
	(LogInfo): Make the label text selectable.

	* logview.c (logview_create_monitor_widget): Move it here. Remove
	useless calls.
	(LoadLogMenu): Don't set the size of the filechooser. Don't change
	the directory to the preset every time we show the filechooser.
	(logview_help): Remove unused variable.

	* monitor.c (monitor_stop): Little refactoring.

2004-11-16  Vincent Noel  <vnoel@cox.net>
