@@ -1,3 +1,7 @@
+2004-12-30  Vincent Noel  <vnoel@cox.net>
+
+	* info.c (RepaintLogInfo): Use ngettext, fixes bug #162584.
+
 2004-12-09  Vincent Noel  <vnoel@cox.net>
 
 	* logview.c (main): Instead of requesting the option --file to
